<resources>

    <string name="app_name">导航定位仪</string>
    <string name="btn_start_gointo">开启定位之旅</string>
    <string name="tab1">热点</string>
    <string name="tab2">导航</string>
    <string name="tab3">周边</string>
    <string name="tab4">地图</string>
    <string name="tab5">更多</string>
    <string name="slide_menu_title">定位助手</string>
	<string name="wifi_portable">随身WiFi</string>
    <string name="location_record">定位记录</string>
	<string name="power_saving_mode">省电模式</string>
	<string name="flow_info">流量统计</string>
	<string name="personal">用户中心</string>
	<string name="arount_wifi_title">身边附件的WiFi</string>
	<string name="open_wifi">开启WiFi</string>
	<string name="open_car_mode">车载模式</string>
	<string name="act_loc_query">开启WiFi,开启智能定位.</string>
	<string name="act_wifiscanresult_please_open_wifi">您的手机尚未开启WiFi连接\n点击上方开关启用并扫描附件热点</string>
	<string name="more">更多</string>
	<string name="app_set">应用设置</string>
	<string name="invite_friends">邀请好友使用</string>
	<string name="check_new_app_version">检查新版本</string>
	<string name="feedback">意见反馈</string>
	<string name="grade_to_me">为我评分</string>
	<string name="attention_weixin">关注我们的微信</string>
	<string name="about_app">关于智能定位仪</string>
	<string name="weixin_num">微信号:%1$s</string>
	<string name="setting_share_way">推荐给朋友:</string>
	<string name="back">返回</string>
	<string name="submit">提交</string>
	<string name="show_status_bar_info">显示状态栏图标信息</string>
	<string name="auto_check_app_update_version">启动时自动检查升级</string>
	<string name="accept_news">接收最新消息</string>
	<string name="suggest_title">意见建议:</string>
	<string name="suggest_hint">请输入反馈信息</string>
	<string name="suggest_page_title">意见反馈</string>
	<string name="about_msg">智能终端定位,找到身边每个角落</string>
	<string name="cur_ver">当前版本:%1$s</string>
	<string name="loc_navigation">定位导航</string>
	<string name="shop_map_list">商店地图</string>
	<string name="confirm_del_img_str">确定要删除当前地图文件?</string>
	<string name="confirm_download_img_str">确定要下载当前地图文件?</string>
	<string name="confirm">确认</string>
	<string name="cancel">取消</string>
	<string name="downloading">正在下载中&#8230;</string>
	<string name="locationing">定位</string>
	<string name="exit_app_msg">再按一次退出应用</string>
	<string name="city_sel">城市选择</string>
	<string name="hotpoint_type">热点类型</string>
</resources>
